<resources>
    <string name="app_name">taskmaster</string>
    <string name="my_tasks">My Tasks</string>
    <string name="add_task">ADD TASK</string>
    <string name="all_tasks">ALL TASKS</string>
    <string name="a_default_picture">A Default Picture</string>
    <string name="add_this_task">Add This Task</string>
    <string name="add_a_task">Add a Task</string>
    <string name="green_square">Green Square</string>
    <string name="task_title">Task title</string>
    <string name="task_description">Task Description</string>
    <string name="total_tasks_0">Total tasks: 0</string>
    <string name="submitted">Submitted!</string>
    <string name="input_your_task_title">Input your task title</string>
    <string name="input_description_of_your_task">Input description of your task</string>
    <string name="task_details">Task Details</string>
    <string name="todo">TODO</string>
    <string name="username">Username:</string>
    <string name="enter_username">Enter Username</string>
    <string name="save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="emailfield">Email</string>
    <string name="submit">Submit</string>
    <string name="nickname">Nickname</string>
    <string name="verify_account">Verify Account</string>
    <string name="verification_code">Verification Code</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="picture">Picture</string>
    <string name="all_tasks_page">All Tasks Page</string>
    <string name="status">Status:</string>
    <string name="ImageS3">TODO</string>
    <string name="add_task_location">Add Task Location:</string>
    <string name="add_the_task_you_made_button">Add The Task You made Button</string>
    <string name="add_title_for_your_task">Add title for your task</string>
    <string name="interstitial">interstitial</string>
    <string name="reward">reward</string>
</resources>