<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <TextView
        android:id="@+id/LoginActivityTitleTextView"
        android:layout_width="83dp"
        android:layout_height="31dp"
        android:layout_marginStart="166dp"
        android:layout_marginTop="55dp"
        android:text="@string/login"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/LoginActivityEmailEditText"
        android:layout_width="332dp"
        android:layout_height="59dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="70dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginActivityTitleTextView"
        android:autofillHints="" />

    <EditText
        android:id="@+id/LoginActivityPasswordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginActivityEmailEditText" />

    <Button
        android:id="@+id/LoginActivitySubmitButton"
        android:layout_width="128dp"
        android:layout_height="59dp"
        android:layout_marginStart="157dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="161dp"
        android:text="@string/submit"
        android:textColor="#455A64"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginActivityPasswordEditText" />
</androidx.constraintlayout.widget.ConstraintLayout>